     will show 'typographical' errors with a blue background and 'style' errors
     with a red background in the upper part of the LT window. 'typographical' and
     'style' are the types that are set in grammar.xml as "type=...".
     There's no user interface yet to configure these colors. Note that you should
     only edit the languagetool.cfg file when LT is not running.

Internal:
    -Words are not ignored anymore by the spell checker just because they occur in
     a rule's suggestion. If you want the spell checker to ignore words globally, add
     them to hunspell/ignore.txt. To ignore them depending on the context, add a
     'ignore_spelling' rule to disambiguation.xml.
    -A file 'hunspell/prohibit.txt' can now be used to mark words as spelling errors
     even if the spell checker would normally accept them. This is useful to improve
     the LanguageTool spell checker without waiting for the upstream checker to be
     updated.
     The 'prohibit.txt' file is the opposite of 'ignore.txt', which causes the
     spell checker to ignore words.


2.7 (2014-09-29)

-Breton:
    -added and improved rules
    -New rule that checks if a weekday matches a date, e.g. detects
     "Gwener 28 a viz Eost 2014", as that date isn't a Friday.
     
-Catalan:
    -added and improved rules
    -fixed false alarms
    -updated dictionary

-Dutch:
    -added and improved many rules
    -switched to Morfologik-based spell checker

-English:
    -Do you want to be part of the team that develops the world's most powerful
     Open Source proofreading tool? We're looking for a maintainer for the English
     rules in LanguageTool. See http://wiki.languagetool.org/tasks-for-language-maintainers
     for details.
    -All English dictionaries have been extended to contain word frequency classes
     to improve the spell checker suggestions (the frequency data is taken from
     https://github.com/mozilla-b2g/gaia/tree/master/apps/keyboard/js/imes/latin/dictionaries,