@@ -8461,7 +8461,7 @@ USA
                 <example type="correct">Recently I have <marker>experienced a serious problem</marker>.</example>
             </rule>
             <!-- and now &quot;an experienced soldier&quot; -->
-            <rule default="off">
+            <rule>
                 <pattern>
                     <token><exception postag="PRP.*|NN.*|DT|JJ.*|RB.*|CC|IN|VBG|WRB|WDT|WP\$?|UNKNOWN" postag_regexp="yes"></exception><exception regexp="yes">one|have|ha[sd]|appointed|called|s|\&quot;|[0-9].*|[,\'.\(\[]</exception></token>
                     <marker>
